# ipa

./: .gitignore  app.py  clean_words.csv  dataset.ipynb  hgtranscription.ipynb  ipa2020.csv  model.py  package-lock.json  package.json  pyproject.toml  requirements.txt  token.ipynb  words.csv  work.pkl
src/: App.css  App.js  App.py  prediction.py
static/: styles.css
templates/: index.html
