[project]
name = "ipa"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "i-mary-ershova", email = "i.mary.ershova@gmail.com" }
]
dependencies = [
    "flask>=3.1.0",
    "ipykernel>=6.29.5",
    "tensorflow>=2.18.0",
    "scikit-learn>=1.5.2",
    "keras>=3.7.0",
    "pandas>=2.2.3",
    "flask-cors>=5.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ipa"]
